# src/routes/node.ts
@@ -1,9 +1,9 @@
-import {Router} from "express";
+import { Router } from "express";
 const router = Router();
 import NodeController from '../controllers/NodeController'
 
+router.get("/all", NodeController.getAll);
 router.post("/", NodeController.create);
-router.get("/", NodeController.getAll);
 router.put("/:id", NodeController.update);
 router.get("/:id", NodeController.get);
 router.delete("/:id", NodeController.destroy);
